#1 development configs were added

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "ApplicationDatabase": "DataSource=app.db",
+    "UsersDatabse": "DataSource=users.db"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
