#1 move from sqllite to localdb

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,14 +1,14 @@
 ﻿{
-  "ConnectionStrings": {
-    "ApplicationDatabase": "DataSource=app.db",
-    "UsersDatabse": "DataSource=users.db"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "ConnectionStrings": {
+        "ApplicationDatabase": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "UsersDatabase": "Server=(localdb)\\mssqllocaldb;Database=UsersDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
-  }
 }
