#1 edit production config

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,12 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "ConnectionStrings": {
+        "ApplicationDatabase": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "UsersDatabase": "Server=(localdb)\\mssqllocaldb;Database=UsersDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        }
     }
-  }
 }
