#1 azure storage is used when production enviroment virable is enabled
admin password and username should be encrypted, but now it's doesn't matter

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "ConnectionStrings": {
-        "ApplicationDatabase": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "UsersDatabase": "Server=(localdb)\\mssqllocaldb;Database=UsersDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ApplicationDatabase": "Server=tcp:smart-promise-application.database.windows.net,1433;Initial Catalog=ApplicationDatabase;Persist Security Info=False;User ID=ankarenkosergey;Password=111567032Qwerty;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+        "UsersDatabase": "Server=tcp:smart-promise-users.database.windows.net,1433;Initial Catalog=UsersDatabase;Persist Security Info=False;User ID=ankarenkosergey;Password=111567032Qwerty;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "Logging": {
         "IncludeScopes": false,
