--- a/Promises.csproj
+++ b/Promises.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Gray.Microsoft.AspNetCore.SignalR.Server" Version="0.2.0-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
-    <PackageReference Include="Neo.SmartContract.Framework" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
