--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,15 @@
 {
   "name": "asp.net",
-  "private": true,
-    "dependencies": {
-        "bootstrap": "3.3.7",
-        "jquery": "2.2.0",
-        "jquery-validation": "1.14.0",
-        "jquery-validation-unobtrusive": "3.2.6",
-        "signalr": "2.2.1"
-    }
+  "private": false,
+  "dependencies": {
+    "bootstrap": "3.3.7",
+    "jquery": "2.2.0",
+    "jquery-validation": "1.14.0",
+    "jquery-validation-unobtrusive": "3.2.6",
+    "signalr": "2.2.1",
+    "bootstrap-notifications": "v1.0.3"
+  },
+  "resolutions": {
+    "jquery": ">= 1.7.2"
+  }
 }
