--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-    "version": "1.0.0",
-    "name": "asp.net",
-    "private": true,
-    "devDependencies": {
-        "gulp": "~3.9.1",
-        "gulp-clean-css": "~3.9.0",
-        "gulp-rename": "~1.2.2",
-        "gulp-minify": "~2.1.0",
-        "gulp-concat": "~2.6.1",
-        "gulp-concat-css": "~2.3.0",
-        "gulp-sequence": "~0.4.6",
-        "gulp-clean": "~0.3.2"
-    }
+  "version": "1.0.0",
+  "name": "asp.net",
+  "private": true,
+  "dependencies": {
+    "neon-js": "git+https://github.com/CityOfZion/neon-js.git"
+  },
+  "devDependencies": {
+    "gulp": "~3.9.1",
+    "gulp-clean-css": "~3.9.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-minify": "~2.1.0",
+    "gulp-concat": "~2.6.1",
+    "gulp-concat-css": "~2.3.0",
+    "gulp-sequence": "~0.4.6",
+    "gulp-clean": "~0.3.2",
+    "gulp-babel": "~7.0.0",
+    "babel-preset-es2015": "~6.24.1"
+  }
 }
