--- a/Promises.csproj
+++ b/Promises.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Cabinet\UserProfile.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\Cabinet\UserProfile.cshtml" />
+    <Content Remove="Views\Cabinet\YourProfile.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-alpha1-final" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
