--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,14 @@
 {
   "name": "asp.net",
   "private": false,
-  "dependencies": {
-    "bootstrap": "3.3.7",
-    "jquery": "2.2.0",
-    "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.6",
-    "bootstrap-notifications": "v1.0.3"
-  },
+    "dependencies": {
+        "bootstrap": "3.3.7",
+        "jquery": "2.2.0",
+        "jquery-validation": "1.14.0",
+        "jquery-validation-unobtrusive": "3.2.6",
+        "bootstrap-notifications": "v1.0.3",
+        "qrcode-js": "*"
+    },
   "resolutions": {
     "jquery": ">= 1.7.2"
   }
