--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
         "bower": "^1.8.2"
     },
     "scripts": {
-        "start": "npm install && bower install && dotnet clean && dotnet restore && dotnet build && gulp build && gulp minify && dotnet run"
+        "start": "gulp build && gulp minify && dotnet clean && dotnet restore && dotnet build  && dotnet run"
     }
 }
